<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/actin_over_view"
        android:title="@string/actin_over_view"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/active_about_me"
        android:title="@string/active_about_me"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/action_shop_cart"
        android:title="@string/action_shop_cart"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/action_my_order"
        android:title="@string/action_my_order"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/action_exbt_events"
        android:title="@string/action_exbt_events"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/action_fav_list"
        android:title="@string/action_fav_list"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
    <item
        android:id="@+id/action_Login_register"
        android:orderInCategory="100"
        android:title="@string/action_login_register"
        app:showAsAction="never"
        app:popupTheme="@style/OverflowMenuStyle"/>
<!--    <item-->
<!--        android:id="@+id/action_login"-->
<!--        android:title="@string/action_login"-->
<!--        app:showAsAction="never"/>-->
</menu>
